Use layout for new content

--- a/index.html
+++ b/index.html
@@ -3,70 +3,78 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Styles Conference</title>
+    <title>MyEasyBytes: Content Creation and Video Solutions</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 
 
 <body>
-    <header class="container group">
+    <header class="primary-header container group">
         <section>
-        <h1 class="logo"<a href="index.html">Styles <br> Conference</a></h1>
+        <h1 class="logo"<a href="index.html">MyEasyBytes</a></h1>
+        <!-- <br><span style="font-size: medium; font-weight: 200;">You Demand&ndash;We Deliver.</span> -->
         </section>
-        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <h3 class="tagline">Content&ndash;Creation and Video&ndash;Solutions</h3>
 
         <nav class="nav primary-nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule.html">schedules</a>
-            <a href="venue.html">venue</a>
-            <a href="register.html">register</a>
+            <a href="#aboutus">About Us</a>
+            <a href="services">Our Services</a>
+            <a href="#contactus">Contact Us</a>
         </nav>
     </header>
 
     <section class="hero container">
-        <h2>Dedicated to the Craft of Building Websites</h2>
-        <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
-            technologies. Join us this August!</p>
-        <a class="btn btn-alt" href="register.html">Register Now</a>
+        <h2>We love to make bits and bytes of Mathematics for you and for all.</h2>
+        <p>We are into the business of education and services related to textbook and video solution for mathematics
+            subject.
+            We also offer E-learning services such as Homework Help, Assignment Help, etc. for Mathematics.</p>
+        <a class="btn btn-alt" href="#contactus">Contact Us</a>
     </section>
-    <section class="grid">
-
-        <section class="teaser col-1-3">
-            <a href="speakers.html">
-                <h5>Speakers</h5>
-                <h3>Workd-Class Speakers</h3>
-            </a>
-            <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-        </section><!--
-            Schedule
-        --><section class="teaser col-1-3">
-            <a href="schedule.html">
-                <h5>Schedule</h5>
-                <h3>Three Inspiring Days</h3>
-            </a>
-            <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.
-            </p>
-        </section><!--
-            Venue
-        --><section class="teaser col-1-3">
-            <a href="venue.html">
-                <h5>Venue</h5>
-                <h3>The Chicago Theatre</h3>
-            </a>
-            <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
-            </p>
-        </section>
+    <section class="row">
+    
+        <div class="grid">
+            <section class="teaser col-1-3">
+                <a href="speakers.html">
+                    <!-- <h5>Abou Us</h5> -->
+                    <h3>Our Aim</h3>
+                </a>
+                <p>We have vast knowledge of Mathematics and we are proud of this at MyEasyBytes. We want to implement some
+                    creative and effective ideas to make learning interesting. We want to get introduced to e-learning to
+                    explore our ideas and innovative methods to teach a student.</p>
+            </section>
+            <!--
+                    Schedule
+                -->
+            <section class="teaser col-1-3">
+                <a href="schedule.html">
+                    <!-- <h5>About Us</h5> -->
+                    <h3>Our Approach</h3>
+                </a>
+                <p>We believe anything can be made understood and we make the content which is not just read but loved. We are
+                    not forced to give the quality in our work but we strive to deliver the best quality of work.
+                </p>
+            </section>
+            <!--
+                    Venue
+                -->
+            <section class="teaser col-1-3">
+                <a href="venue.html">
+                    <!-- <h5>About Us</h5> -->
+                    <h3>Our Work</h3>
+                </a>
+                <p>We offer E-learning services for Mathematics subject as Textbook Solutions, Video Solutions, Online Tutoring,
+                    Homework Help and Assignment Help, etc. All this comes to our client 24x7.
+                </p>
+            </section>
+        </div>
     </section>
     <footer class="primary-footer container group">
-        <small>&copy; Styles Conference</small>
+        <small>&copy; MyEasyBytes.com</small>
         <nav class="nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule">schedules</a>
-            <a href="venue.html">venue</a>
-            <a href="register.html">register</a>
+            <a href="#aboutus">About Us</a>
+            <a href="services">Our Services</a>
+            <a href="#contactus">Contact Us</a>
         </nav>
     </footer>
 </body>
