font size changed for paragraph

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             --><section>
                 
                     <!-- Our Services -->
-                    <h2><strong>Step-by-step Textbook Solution</strong></h2>
+                    <h2><strong>Step-by-step Textbook Solution</strong></h2> <br>
                 
                 <p>The phrase ‘Solution’ is regularly careworn with ‘Answer’. A reply to a query is the effect received by way of fixing
                     the question. Hence, this may additionally simply incorporate a single line or a single word. How one receives to
