Start rebuilding site

--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
 
 
 <body>
-    <header class="primary-header container group">
-        <section >
-        <h1 class="logo"><a href="index.html">MyEasyBytes<span style="font-size: .5em;">.com</span><br> <hr>
-            <span style="font-size: medium; font-weight: 200;">You Demand&ndash;We Deliver.</span>
-        </a></h1>
+    <header>
+        <section>
+            <h1><a href="index.html">MyEasyBytes<span style="font-size: .5em;">.com</span>
+                    
+                    <span style="font-size: medium; font-weight: 200;">You Demand&ndash;We Deliver.</span>
+                </a></h1>
         </section>
-        <h3 class="tagline">Content&ndash;Creation and Video&ndash;Solutions</h3>
+        <h3>Content&ndash;Creation and Video&ndash;Solutions</h3>
 
-        <nav class="nav primary-nav">
+        <nav>
             <ul>
-                <li><a href="#about-us">About Us</a></li><!----
-            --><li><a href="#our-services">Our Services</a></li><!----
-            --><li><a href="#careers">Careers</a></li><!-----            
-            --><li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#our-services">Our Services</a></li>
+                <li><a href="#careers">Careers</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
 
             </ul>
         </nav>
     </header>
 
-    <section class="row-alt">
+    <section>
     
-        <div class="lead container">
-            <section>
+        <div>
+            <section class="box-1">
                 <h2 style="text-align: center;">We love to make bits and bytes of Mathematics for you and for all.</h2> <br>
                 <p style="text-align: justify;">We are into the business of education and services related to textbook and video
                     solution for mathematics
