--- a/index.html
+++ b/index.html
@@ -5,43 +5,60 @@
     <meta charset="utf-8">
     <title>MyEasyBytes | Education Services</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+
 </body>
 <header>header</header>
 <nav>nav</nav>
+<section class="grid">
+    <div>
+        <h1>About Us</h1>
+        <p>We want to implement creative and effective ideas to make learning interesting. And we want to get introduced
+            to e-learning to explore our ideas and innovative methods to teach students.</p>
+    </div>
+    <div>
+        <h4>Our Approach</h4>
+        <p>We believe anything can be made understood and we make the content which is not just read but loved and we
+            strive to deliver the best quality of work to our clients.</p>
+    </div>
+    <div>
+        <h4>Our Work</h4>
+        <p>We offer E-learning services for Mathematics subject as Textbook Solutions, Video Solutions, Online Tutoring,
+            Homework Help and Assignment Help, etc. All this comes to our client 24x7.</p>
+    </div>
+</section>
 <article>
-    <h1>About Us</h1>
-    <p>We want to implement creative and effective ideas to make learning interesting. And we want to get introduced to
-        e-learning to explore our ideas and innovative methods to teach students.</p>
-</article>
-<article>
-    <h1>Out Services</h1>
+    <h4>Out Services</h4>
     <h3>Content Creation and Video Solution</h2>
-    <section>
-        <h4>Why are we unique</h3>
-            <p>The tutors at MyEasyBytes create content that makes the topic easier to understand. We provide content creation
-                services for Mathematics. Our team believes in improving themselves on a daily basis. We keep a daily session of
-                10-15 minutes just to rectify any kind of issue, exchange techniques to improve our working and approach. Our
-                team is dedicated to their work. We give the content which optimizes our knowledge. We try to make the solution
-                brain friendly in best possible way. This approach of MyEasyBytes towards e-learning makes us unique and
-                approachable.
-            </p>
+        <section>
+            <h4>Why are we unique
+    </h3>
+    <p>The tutors at MyEasyBytes create content that makes the topic easier to understand. We provide content creation
+        services for Mathematics. Our team believes in improving themselves on a daily basis. We keep a daily session of
+        10-15 minutes just to rectify any kind of issue, exchange techniques to improve our working and approach. Our
+        team is dedicated to their work. We give the content which optimizes our knowledge. We try to make the solution
+        brain friendly in best possible way. This approach of MyEasyBytes towards e-learning makes us unique and
+        approachable.
+    </p>
     </section>
     <section>
         <h4>A Flexible And Nimble Team</h4>
-        <p>Our team in proficient in their work. At the same time they can adopt other methods to deliver their knowledge.
+        <p>Our team in proficient in their work. At the same time they can adopt other methods to deliver their
+            knowledge.
             When you hire us, you can expect the same kind of content which you want to help your students.
         </p>
     </section>
     <section>
         <h4>Outsourcing With Modern Technology</h4>
         <p>Although we may additionally serve as an outsourced team, due to our technique you will locate a trip that is
-            comparable to that of an in-house team. And we make certain this thru the utilization of the brand new sources
-            which constantly maintains us in a loop of verbal exchange with the college students as properly as with you.
-            Thus, if you’re searching for the best content material outsource partner, MyEasyBytes would be your first-class
+            comparable to that of an in-house team. And we make certain this thru the utilization of the brand new
+            sources
+            which constantly maintains us in a loop of verbal exchange with the college students as properly as with
+            you.
+            Thus, if you’re searching for the best content material outsource partner, MyEasyBytes would be your
+            first-class
             choice. Contact us these days and make sure that your college students acquire solely the fantastic content
             material that the enterprise has to provide at low-priced and low-priced pricing. We supply an array of
             different e-learning options as well.
@@ -49,13 +66,16 @@
     </section>
     <section>
         <h3>Step-by-step Textbook Solution</h3>
-        <p>The phrase ‘Solution’ is regularly careworn with ‘Answer’. A reply to a query is the effect received by way of
+        <p>The phrase ‘Solution’ is regularly careworn with ‘Answer’. A reply to a query is the effect received by way
+            of
             fixing the question. Hence, this may additionally simply incorporate a single line or a single word. How one
-            receives to this reply is no longer mentioned or explained. A MyEasyBytes authored answer helps a pupil examine
+            receives to this reply is no longer mentioned or explained. A MyEasyBytes authored answer helps a pupil
+            examine
             how to clear up the hassle as a substitute than simply supply the answer
         </p>
-            </section>
+    </section>
 </article>
 
 <footer>footer</footer>
+
 </html>
