add media query for mobiles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 <body>
 
 </body>
-<header>header</header>
-<nav>nav</nav>
+<header><section class="logo">
+    <h1><a href="index.html">MyEasyBytes<span style="font-size: .5em;">.com</span><br>
+         <p>------------------------------------------</p>
+        <span style="font-size: medium; font-weight: 200;">You Demand&ndash;We Deliver.</span>
+    </a></h1>
+    </section>
+</header>
+<nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 <section class="grid">
     <div>
         <h1>About Us</h1>
