--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MyEasyBytes | Education Services</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/stylesheets/mobile.css">
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="assets/stylesheets/main.css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
     <header class="primary-header container group">
-        <section >
-        <h1 class="logo"><a href="index.html">MyEasyBytes<span style="font-size: .5em;">.com</span><br> <hr>
+        <section class="logo">
+        <h1><a href="index.html">MyEasyBytes<span style="font-size: .5em;">.com</span><br> <hr>
             <span style="font-size: medium; font-weight: 200;">You Demand&ndash;We Deliver.</span>
         </a></h1>
         </section>
@@ -26,7 +26,6 @@
             --><li><a href="#our-services">Our Services</a></li><!----
             --><li><a href="#careers">Careers</a></li><!-----            
             --><li><a href="#contact-us">Contact Us</a></li>
-
             </ul>
         </nav>
     </header>
